--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="row">
 
           <div class="col-md-3">
-            <img src="pictures/jmorel.JPG" class="img-thumbnail img-responsive rounded" alt="Cinque Terre">
+            <img src="pictures/jmorel.JPG" class="img-thumbnail img-responsive rounded" alt="JMOREL">
           </div>
 
           <div class="col-md-9">
