--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
           </div>
 
           <div class="col-md-9">
-            <p class="card-text lead">Lorem ipsum dolor amet gastropub chambray aesthetic quinoa mumblecore health goth shoreditch kale chips. Cloud
-              bread vape glossier lomo next level poke locavore yuccie, forage truffaut enamel pin cornhole twee lo-fi banh
-              mi. VHS tumeric marfa chambray coloring book. Air plant authentic enamel pin hexagon pitchfork. Narwhal fixie
-              asymmetrical, swag taiyaki taxidermy af chia gochujang pour-over. Raw denim succulents tbh bitters vape flexitarian
-              heirloom. .
+            <p class="card-text lead">Jonas Morel is a web developer who is excited about developing responsive full featured customer facing web sites. He is interested in HTML,
+               CSS and JavaScript developing colorful and stimulating user interfaces. 
+
+              
             </p>
           </div>
         </div>
@@ -80,10 +79,8 @@
         <div class="row">
 
           <div class="col-md-12">
-            <p class="card-text lead ">Brunch chambray master cleanse glossier fam marfa skateboard subway tile. Thundercats vexillologist vegan, art
-              party selfies subway tile vinyl hammock wayfarers bitters brooklyn direct trade. Franzen actually bespoke lomo
-              locavore jean shorts forage stumptown tumeric microdosing waistcoat banh mi listicle. Asymmetrical kitsch dreamcatcher
-              photo booth hexagon hot chicken</p>
+            <p class="card-text lead ">You can view his portfolio which includes a collection of JavaScript based games and also an application that analyses your mood via a face recognition API. 
+              </p>
           </div>
         </div>
 
